fixing gap

--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -3,7 +3,7 @@
 }
 
 .fun-facts {
-  @apply grid grid-cols-4 sm:grid-cols-1  gap-7 sm:gap-5;
+  @apply grid grid-cols-4 sm:grid-cols-1  gap-7 sm:gap-10;
 }
 
 .fun-fact{
